# DeepThroat

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.MD  Dockerfile.api  FEATURES_SUMMARY_2026-04-21.md  PRODUCTION_ROADMAP.md  README.md  Server_Instruction.md  TECH_ROADMAP.md  USER_COMMANDS.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml  rag-quality-gate.yml  redteam.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
config/: scheduler.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPROVEMENTS.md  MARKETING.md  PLAN.md  PRODUCT.md  ROADMAP.md  TESTING.md  eval_updates_20260422.md
eval/: COMPARISON-MAIN-VS-FIXES.md  RAG-FAILURES-20260505.md  SESSION-2026-05-05.md  SUMMARY-2026-04-23-FINAL.md  SUMMARY-2026-04-23.md  eval_rag_metrics.py  eval_ragas_metrics.py  judges.py  run_provider_comparison.py
eval/config/: targets.yaml
eval/core/: api_utils.py  checkpoint.py  judges.py  reporting.py  runner.py
eval/datasets/: 20260422_deep_eval_quality_dataset.json  20260422_manjerok_expanded_dataset.json  client-test-scenarios-telegram.csv  mvp-beta-tests-manjerok-confluence.md  offline_ready_full.json
eval/scripts/: run_eval.py  strip_cta.py
scratch/: fix_api_responses.py  merge_datasets.py  reconstruct_dataset.py  rehab_dataset.py  sync_expected_answers.py
scripts/: build_offline_dataset.py  manjerok_deepteam_run.py  run_redteam.py  scheduler.py
src/api/: main.py  runner.py  schemas.py
tests/: test_charts.py  test_quality_charts.py
web/: Dockerfile  package-lock.json  package.json
(+43 files in other folders)
